[project]
name = "haos-mobile-wan-dev"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "actionlint-py>=1.7.12.24",
    "coverage[toml]>=7.15.2",
    "mypy>=2.3.0",
    "paho-mqtt>=2.1.0",
    "pyyaml>=6.0.3",
    "ruff>=0.15.22",
    "shellcheck-py>=0.11.0.1",
    "types-paho-mqtt>=1.6.0.20240321",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.13"
mypy_path = "ha_cellular_gateway/rootfs"
strict = true

[[tool.mypy.overrides]]
module = ["dbus", "dbus.*"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["ha_cellular_gateway/rootfs/app"]

[tool.coverage.report]
fail_under = 86.5
precision = 1
show_missing = true
